fix overlapping sections on small viewport

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav.scroll {
 }
 
 section {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     margin: 0;
     display: flex;
